update hidden header
