# fe/src/app/api/admin/model/pageInventoryResponse.ts
@@ -13,14 +13,14 @@ import { InventoryResponse } from './inventoryResponse';
 
 
 export interface PageInventoryResponse { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
+    first?: boolean;
+    last?: boolean;
     size?: number;
     content?: Array<InventoryResponse>;
     number?: number;
     sort?: Array<SortObject>;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
     empty?: boolean;
