# fe/src/app/api/admin/model/pagePaymentResponse.ts
@@ -13,14 +13,14 @@ import { PaymentResponse } from './paymentResponse';
 
 
 export interface PagePaymentResponse { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
+    first?: boolean;
+    last?: boolean;
     size?: number;
     content?: Array<PaymentResponse>;
     number?: number;
     sort?: Array<SortObject>;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
     empty?: boolean;
