# fe/src/app/api/admin/model/pageProductResponse.ts
@@ -13,14 +13,14 @@ import { ProductResponse } from './productResponse';
 
 
 export interface PageProductResponse { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
+    first?: boolean;
+    last?: boolean;
     size?: number;
     content?: Array<ProductResponse>;
     number?: number;
     sort?: Array<SortObject>;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
     empty?: boolean;
