# fe/src/app/api/admin/model/pageUserResponse.ts
@@ -13,14 +13,14 @@ import { SortObject } from './sortObject';
 
 
 export interface PageUserResponse { 
-    totalElements?: number;
     totalPages?: number;
+    totalElements?: number;
+    first?: boolean;
+    last?: boolean;
     size?: number;
     content?: Array<UserResponse>;
     number?: number;
     sort?: Array<SortObject>;
-    first?: boolean;
-    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
     empty?: boolean;
