# fe/src/app/api/user/model/pageProductResponse.ts
@@ -13,14 +13,14 @@ import { ProductResponse } from './productResponse';
 
 
 export interface PageProductResponse { 
-    totalPages?: number;
     totalElements?: number;
-    first?: boolean;
-    last?: boolean;
+    totalPages?: number;
     size?: number;
     content?: Array<ProductResponse>;
     number?: number;
     sort?: Array<SortObject>;
+    first?: boolean;
+    last?: boolean;
     numberOfElements?: number;
     pageable?: PageableObject;
     empty?: boolean;
